fixed header alignment; finished formatting lightbox

--- a/lightbox.css
+++ b/lightbox.css
@@ -4,12 +4,12 @@
     position: absolute;
 }
 .previewContainer img {
-    width: 350px;
-    height: 350px;
-    padding: 10px; transition: 1s;
+    width: 300px;
+    height: 300px;
+    padding: 20px; transition: 1s;
 }
 .previewContainer img:hover {
-    filter: sepia(50%);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     transform: scale(1.1);
 }
 #lightboxHeader {
@@ -31,9 +31,8 @@
     float: left;
     width: 25%;
 }
-  
-  /* The Modal (background) */
-  .modal {
+/* Modal window formatting */
+.modal {
     display: none;
     position: fixed;
     z-index: 1;
@@ -43,11 +42,9 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: black;
   }
-  
-  /* Modal Content */
-  .modal-content {
+/* Modal content formatting */
+.modal-content {
     position: relative;
     background-color: #fefefe;
     margin: auto;
@@ -55,32 +52,31 @@
     width: 90%;
     max-width: 1200px;
   }
-  
-  /* The Close Button */
-  .close {
+/* Close button for Modal */
+.close {
     color: white;
     position: absolute;
     top: 10px;
     right: 25px;
     font-size: 35px;
     font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 8px 12px;
+}
+.close:hover,
+.close:focus {
     color: #999;
     text-decoration: none;
     cursor: pointer;
-  }
-  
-  /* Hide the slides by default */
-  .mySlides {
+    background-color: rgba(0, 0, 0, 1.0);
+}
+/* Hide the slides by default */
+.slides {
     display: none;
   }
-  
   /* Next & previous buttons */
-  .prev,
-  .next {
+.prev,
+.next {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -94,50 +90,24 @@
     border-radius: 0 3px 3px 0;
     user-select: none;
     -webkit-user-select: none;
-  }
-  
-  /* Position the "next button" to the right */
-  .next {
+    background-color: rgba(0, 0, 0, 0.5)
+}
+/* Position next button to right, note inheritance ^ */
+.next {
     right: 0;
     border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover,
-  .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-  }
-  
-  /* Number text (1/3 etc) */
-  .numbertext {
+}
+/* Make button borders more visible when hovered */
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 1.0);
+}
+/* Number text in Modal */
+.numbertext {
     color: #f2f2f2;
-    font-size: 12px;
+    background-color: rgba(0, 0, 0, 0.3);
+    font-size: 15px;
     padding: 8px 12px;
     position: absolute;
     top: 0;
-  }
-  
-  /* Caption text */
-  .caption-container {
-    text-align: center;
-    background-color: black;
-    padding: 2px 16px;
-    color: white;
-  }
-  
-  img.demo {
-    opacity: 0.6;
-  }
-  
-  .active,
-  .demo:hover {
-    opacity: 1;
-  }
-  
-  img.hover-shadow {
-    transition: 0.3s;
-  }
-  
-  .hover-shadow:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
+}
